:closed_lock_with_key: actuator